Adjust styles of Refine dashboard to be more MIT

--- a/frontend/staff-dashboard/public/index.html
+++ b/frontend/staff-dashboard/public/index.html
@@ -20,8 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      refine - A React-based framework for building data-intensive applications
-      in no time.
+      MITx Online Staff Dashboard
     </title>
     <script type="text/javascript">
       OIDC_CONFIG = {
